fix notice icons on ie11 default page identifier is home

--- a/css/style.css
+++ b/css/style.css
@@ -1711,7 +1711,7 @@ input[type='checkbox'][disabled] +label {
 }
 
 .notice_icon_div {
-	width: unset;
+	width: auto !important;
 	margin: 0 8px 0 8px;
 	position: relative;
 }
